2017-02-09 1.0.6  Making sense out of assets (and added POOP images in public to see the difference. SHouldnt see in prod). 
                  Fixed logger issue and added LOG to stdout in Railsy way via `RAILS_LOG_TO_STDOUT`. Docker is so close now!
2017-02-09 1.0.5  Added `db_seed_ver` to "version" db seed.
2017-02-09 1.0.4  DRYed the configs. Added instructions to install this.
2017-02-09 1.0.3  Added authentication via ENV variable once again. Docker wins!
2017-02-09 1.0.2  Added nice icons. Two migrations: URLs to Articles, facebook/twitter_id to comments. Still quite silly...
2017-02-09 1.0.1  Added welcome/about. Fixed app_name vars. Added favico and CSS.
2017-02-08 1.0.0  Fixed finally mysql2!! Now app is fully ENV_variablized :)
2017-02-07 0.9.1  Rails 5.1 works but not dockerized and only sqlite.