@@ -14,3 +14,7 @@
   white-space:nowrap;
   opacity: 0.3;
 }
+
+.env-production {
+  background-color: #eef;
+}
